# verb_memorizer_beta

./: Cargo.toml  README.md  build.rs  irregular_verbs.txt
.github/workflows/: main.yml  release.yml
src/: library.rs  main.rs  tests.rs
tests/: integration_test.rs
