[package]
name = "verb_memorizer_beta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"

[build-dependencies]
copy_to_output = "2.0.0"