[package]
name = "verb_memorizer_beta"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.7"
clap = { version = "4.0.30", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
copy_to_output = "2.0.0"
